big update and cleaning

--- a/src/files/statics/css/src/Main/_articles.scss
+++ b/src/files/statics/css/src/Main/_articles.scss
@@ -2,6 +2,16 @@
  * !Articles
  * ================================*/
 
+li:not(:last-child) .article {
+	border-bottom: 1px solid #CCC;
+	margin-bottom: 1.6rem;
+
+	@media only screen and (min-width : 800px) {
+		margin-bottom: 3.2rem;
+	}
+
+}
+
 .article {
 
 	header {
@@ -12,7 +22,7 @@
 		font: bold 3rem/4rem Share, Helvetica,​ arial,​ freesans,​ clean,​ sans-serif;
 		text-transform: uppercase;
 
-		@media only screen and (min-width : 1440px) {
+		@media only screen and (min-width : 800px) {
 			font-size: 4.2rem;
 			line-height: 6.825rem;
 		}
@@ -24,7 +34,7 @@
 		font-size: 1rem;
 		text-transform: uppercase;
 
-		@media only screen and (min-width : 1440px) {
+		@media only screen and (min-width : 800px) {
 			font-size: 1.6rem;
 		}
 
