--- a/src/files/statics/css/src/Main/_content.scss
+++ b/src/files/statics/css/src/Main/_content.scss
@@ -8,7 +8,7 @@
 	margin: 1.6rem 0;
 	text-align: justify;
 
-	@media only screen and (min-width : 1440px) {
+	@media only screen and (min-width : 800px) {
 		margin: 3.2rem 0;
 	}
 
@@ -42,12 +42,17 @@
 		margin: 1.6rem 0;
 		padding: 1.6rem;
 		text-shadow: none;
+		overflow: auto;
 
-		@media only screen and (min-width : 1440px) {
+		@media only screen and (min-width : 800px) {
 			margin-left: -6.4rem;
 			margin-right: -6.4rem;
 		}
 
+	}
+
+	code {
+		font: 1.4rem/2.3rem Consolas, monospace;
 	}
 
 	ul, ol {
@@ -113,7 +118,7 @@
 		text-align: center;
 		margin: 0 auto 2.6rem;
 
-		@media only screen and (min-width : 1440px) {
+		@media only screen and (min-width : 800px) {
 
 			&:nth-of-type(odd) {
 				float: left;
