fix some incorrect characters in the css

--- a/src/files/statics/css/src/Main/_articles.scss
+++ b/src/files/statics/css/src/Main/_articles.scss
@@ -19,7 +19,7 @@ li:not(:last-child) .article {
 	}
 
 	h1 {
-		font: bold 3rem/4rem Share, Helvetica,​ arial,​ freesans,​ clean,​ sans-serif;
+		font: bold 3rem/4rem Share, Helvetica, arial, freesans, clean, sans-serif;
 		text-transform: uppercase;
 
 		@media only screen and (min-width : 800px) {
