Font size fixes for (mainly) Chrome Android

--- a/src/files/statics/css/src/Main/_header.scss
+++ b/src/files/statics/css/src/Main/_header.scss
@@ -11,7 +11,7 @@
 	}
 
 	h1 {
-		font: 2em/1em 'Yannick Cr', Tahoma, Geneva, Kalimati, sans-serif;
+		font: 3.2rem/2rem 'Yannick Cr', Tahoma, Geneva, Kalimati, sans-serif;
 		text-shadow: 2px 2px 0 #FFF;
 		margin-top: 1.3rem;
 
@@ -34,7 +34,7 @@
 	}
 
 	h2 {
-		font: 1em/1em 'Yannick Cr', Tahoma, Geneva, Kalimati, sans-serif;
+		font: 2rem/2rem 'Yannick Cr', Tahoma, Geneva, Kalimati, sans-serif;
 		letter-spacing: 0.5em;
 
 		@media only screen and (min-width : 800px) {
