--- a/src/files/statics/css/src/Main/_articles.scss
+++ b/src/files/statics/css/src/Main/_articles.scss
@@ -13,6 +13,7 @@ li:not(:last-child) .article {
 }
 
 .article {
+	font: default-font();
 
 	header {
 		text-align: center;
@@ -31,13 +32,8 @@ li:not(:last-child) .article {
 
 	.date {
 		color: #999;
-		font-size: 1rem;
+		font-size: 1.6rem;
 		text-transform: uppercase;
-
-		@media only screen and (min-width : 800px) {
-			font-size: 1.6rem;
-		}
-
 	}
 
 	.contribute {
