--- a/src/files/statics/css/src/Main/_content.scss
+++ b/src/files/statics/css/src/Main/_content.scss
@@ -5,6 +5,7 @@
 .content {
 	@include clearfix();
 	@include hyphens(auto);
+	font: default-font();
 	margin: 1.6rem 0;
 	text-align: justify;
 
@@ -33,6 +34,7 @@
 
 	p {
 		margin: 1.6rem 0;
+		font: default-font();
 	}
 
 	pre {
@@ -77,7 +79,7 @@
 	}
 
 	img {
-		max-width: 90%;
+		max-width: 100%;
 		vertical-align: middle;
 	}
 
